# vibeProj

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: .review-completed
.claude/agents/: cuda-engineer.md  gpu-code-reviewer.md  maintainability-reviewer.md  performance-reviewer.md  python-engineer.md  zero-copy-reviewer.md
.claude/hooks/: pre-land-gate.sh
.claude/skills/commit/: SKILL.md
.claude/skills/cuda-optimizer/: SKILL.md
.claude/skills/cuda-writing/: SKILL.md
.claude/skills/gpu-code-review/: SKILL.md
.claude/skills/pre-land-review/: SKILL.md
.claude/skills/write-new-projection/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
benchmarks/: bench_chunked.py  bench_compare.sh  bench_helmert.py  bench_projections.py  chunked_results.json  results.json
docs/: conf.py  index.md
docs/_static/css/: vibespatial.css
docs/_static/js/: vibespatial.js
docs/dev/: adding-projections.md  architecture.md  fused-kernels.md  index.md  testing.md
docs/plans/: cpu-integration-plan.md
docs/recipes/: dask.md  geopandas.md  index.md  qgis.md  rasterio.md  shapely.md
docs/user/: api.md  index.md  install.md  precision.md  projections.md  quickstart.md  vibespatial.md
experiments/conformal_deep_dive/: FINDINGS.md  experiment.py  results.json
scripts/: check_projections.py  pipeline_demo.py
src/vibeproj/: __init__.py  _datum_corrections.py  _ds_device_fns.py  compat.py  crs.py  ellipsoid.py  exceptions.py  fused_kernels.py  gpu_detect.py  helmert.py  pipeline.py  runtime.py  transformer.py
src/vibeproj/projections/: __init__.py  albers_equal_area.py  azimuthal_equidistant.py  base.py  cylindrical_equal_area.py  eckert_iv.py  eckert_vi.py  equal_earth.py  geostationary.py  gnomonic.py  krovak.py  lambert_azimuthal_equal_area.py  lambert_conformal_conic.py  mercator.py  mollweide.py  natural_earth.py  oblique_mercator.py  oblique_stereographic.py  orthographic.py  plate_carree.py  robinson.py  sinusoidal.py  stereographic.py  transverse_mercator.py  winkel_tripel.py
tests/: conftest.py  test_accuracy_audit.py  test_compat.py  test_crs.py  test_datum_corrections.py  test_fused_kernels.py  test_helmert.py  test_transform_bounds.py  test_transformer.py
tools/: fit_datum_corrections.py
